<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivitySecond">

    <TextView
        android:id="@+id/permission_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.2"
        android:lineSpacingExtra="4sp"
        android:text="@string/grant_access_permissions"
        android:textColor="@color/beige"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/permission_sub_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/permission_header"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="1sp"
        android:text="@string/grant_access_for_a_seamless_experience_tap_below_to_enable_camera_storage_and_location_permissions"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_camera_permission"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:background="@drawable/button_background"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="4sp"
            android:text="@string/take_a_pictures"
            android:textColor="@color/dark_teal"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/text_camera_granted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/permission_granted"
            android:textColor="@color/white"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="200dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_location_permission"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:background="@drawable/button_background"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="4sp"
            android:text="@string/get_locations"
            android:textColor="@color/dark_teal"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/text_location_granted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/permission_granted"
            android:textColor="@color/white"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_audio_permission"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:background="@drawable/button_background"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="4sp"
            android:text="@string/record_audio"
            android:textColor="@color/dark_teal"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/text_audio_granted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/permission_granted"
            android:textColor="@color/white"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="360dp"
        android:layout_marginStart="200dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_contact_permission"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:background="@drawable/button_background"
            android:letterSpacing="0.2"
            android:lineSpacingExtra="4sp"
            android:text="@string/read_contacts"
            android:textColor="@color/dark_teal"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/text_contact_granted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/permission_granted"
            android:textColor="@color/white"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

    <TextView
        android:id="@+id/current_activated_permission_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:gravity="center"
        android:textColor="@color/beige"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>